@@ -47,6 +47,9 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
     @Getter
     @Value("${elasticSearch.maxConnTotal:300}")
     private int maxConnTotal;
+    @Getter
+    @Value("${elasticSearch.socketTimeout:60000}")
+    private int socketTimeout;
 
     @Bean
     public String indexNamePrefix() {
@@ -66,7 +69,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
         builder.setRequestConfigCallback(
                 requestConfigBuilder -> requestConfigBuilder
                         .setConnectTimeout(15000)
-                        .setSocketTimeout(25000));
+                        .setSocketTimeout(socketTimeout));
         builder.setHttpClientConfigCallback(httpAsyncClientBuilder -> {
             httpAsyncClientBuilder.setMaxConnPerRoute(maxConnPerRoute)
                     .setMaxConnTotal(maxConnTotal)
@@ -111,7 +114,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 
 
 //    @WritingConverter
-//    public class LocalDateTimeWritingConverter implements Converter<LocalDateTime, String>  {
+//    public class LocalDateTimeWritingConverter implements Converter<LocalDateTime, String> {
 //
 //        @Override
 //        public String convert(LocalDateTime source) {
@@ -120,7 +123,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 //    }
 //
 //    @ReadingConverter
-//    public class LocalDateTimeReadingConverter implements Converter<String, LocalDateTime>  {
+//    public class LocalDateTimeReadingConverter implements Converter<String, LocalDateTime> {
 //
 //        @Override
 //        public LocalDateTime convert(String source) {
@@ -149,7 +152,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 //    @Bean
 //    @Override
 //    public ElasticsearchCustomConversions elasticsearchCustomConversions() {
-//        return new ElasticsearchCustomConversions(List.of(new LocalDateTimeWritingConverter(),
+//        return new ElasticsearchCustomConversions(Arrays.asList(new LocalDateTimeWritingConverter(),
 //                new LocalDateTimeReadingConverter(), new LocalDateReadingConverter(),
 //                new LocalDateWritingConverter()));
 //    }
